# LogiFlow

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  conftest.py  docker-compose.yml  docker-init.sh  env.example  init_admin.py  init_data.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_app.py
deliveries/: admin.py  factories.py  models.py  serializers.py  test_admin.py  test_models.py  test_serializers.py  test_urls.py  test_views.py  urls.py  views.py
deliveries/management/commands/: load_sample_data.py
deliveries/migrations/: 0001_initial.py  0002_initial.py
deliveries/templates/deliveries/: login.html  report.html
delivery_project/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: .gitignore  DOCKER.md  POETRY_SETUP.md  README.md  STRUCTURE.md
fixtures/: initial_data.json
mobile-app/: .gitignore  App.js  README.md  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js
mobile-app/src/navigation/: AppNavigator.js
mobile-app/src/screens/: CreateDeliveryScreen.js  DeliveryDetailsScreen.js  HomeScreen.js
orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
restaurants/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py
static/: .gitkeep
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
web-report/: package.json
web-report/public/: index.html
web-report/src/: App.js
(+12 files in other folders)
